--- a/login.html
+++ b/login.html
@@ -3,12 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>Holberton Sign-up</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Your visible content goes here -->
-    <h1>Hello World!</h1>
+    <h1>Welcome to Holberton!</h1>
+    <form>
+            <div class="form-group">
+                <label for="name">First name:</label>
+                <input type="text" id="fname" name="first_name" required>
+            </div>
+            <div class="form-group">
+                <label for="name">Last name:</label>
+                <input type="text" id="lname" name="last_name" required>
+            </div>
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="uname" name="user_name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <textarea id="text" name="password" required></textarea>
+            </div>
+            
+            <button type="submit">Sign up!</button>
+        </form>
     <script src="script.js"></script>
 </body>
 </html>
