--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Your visible content goes here -->
-    <h1>Welcome to Holberton!</h1>
+    <h1 id="welcome">Welcome to Holberton!</h1>
     <form>
             <div class="form-group">
                 <label for="name">First name:</label>
