--- a/login.html
+++ b/login.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Your visible content goes here -->
     <h1 id="welcome">Welcome to Holberton!</h1>
+    <h2>Scroll down to use our super-easy and convenient sign-up page, designed by our finest students.</h2>
     <form>
             <div class="form-group">
                 <label for="name">First name:</label>
-                <input type="text" id="fname" name="first_name" required>
+                <input type="text" id="fname" name="first_name" minlength="10" required>
+                <p id="fname-req"><i>Must be at least 10 characters.</i></p>
             </div>
             <div class="form-group">
                 <label for="name">Last name:</label>
