--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             <div class="form-group">
                 <label for="name">Last name:</label>
                 <input type="text" id="lname" name="last_name" pattern="(?=.[+^~`|])" placeholder="Squires+~`"required>
-                <p id="lname-req">Must include a special character.</p>
+                <p id="lname-req"><i>Must include a special character.</i></p>
             </div>
             <div class="form-group">
                 <label for="username">Username:</label>
@@ -26,8 +26,9 @@
             </div>
 
             <div class="form-group">
+                <button>Randomize</button>
                 <label for="password">Password:</label>
-                <textarea id="text" name="password" required></textarea>
+                <input id="text" name="password" required readonly></input>
             </div>
             
             <button type="submit">Sign up!</button>
