--- a/login.html
+++ b/login.html
@@ -26,12 +26,12 @@
             </div>
 
             <div class="form-group">
-                <button>Randomize</button>
+                <button id="random-btn">Randomize</button>
                 <label for="password">Password:</label>
                 <input id="text" name="password" required readonly></input>
             </div>
             
-            <button type="submit">Sign up!</button>
+            <button id="signup-btn>Sign up!</button>
         </form>
     <script src="script.js"></script>
 </body>
