--- a/login.html
+++ b/login.html
@@ -26,8 +26,11 @@
             </div>
 
             <div class="form-group">
-                <button id="random-btn">Randomize</button>
+                <button id="random-btn" type="button" onclick="createPassword()">Randomize</button>
                 <label for="password">Password:</label>
+                <script> function createPassword() {
+                    document.getElementById("text").value = "password invalid";}
+                </script>
                 <input id="text" name="password" required readonly></input>
             </div>
             
