move script from html to script.js

--- a/login.html
+++ b/login.html
@@ -26,15 +26,12 @@
             </div>
 
             <div class="form-group">
-                <button id="random-btn" type="button" onclick="createPassword()">Randomize</button>
+                <button id="random-btn" type="button">Randomize</button>
                 <label for="password">Password:</label>
-                <script> function createPassword() {
-                    document.getElementById("text").value = "password invalid";}
-                </script>
                 <input id="text" name="password" required readonly></input>
             </div>
             
-            <button id="signup-btn>Sign up!</button>
+            <button id="signup-btn">Sign up!</button>
         </form>
     <script src="script.js"></script>
 </body>
