--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="uname" name="user_name" minlength="5" maxlength="5" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])" required>
+                <input type="text" id="uname" name="user_name" minlength="5" maxlength="5" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{5}" required>
                 <p id="uname-req"><i>Username must be EXACTLY 5 characters<br>Must contain one digit, one lowercase letter, and one uppercase letter </i></p>
             </div>
 
