Update image tag in login.html

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <h1 id="welcome">Welcome to Holberton!</h1>
     <h2>Scroll down to use our super-easy and convenient sign-up page, designed by our finest students.</h2>
     <form>
-        <img src="Provocative Pop-Up Ad with Hypnotic Design.png" id="ad-1">
+        <img src="Provocative Pop-Up Ad with Hypnotic Design.png" name ="ad" id="ad-1">
             <div class="form-group">
                 <label for="name">First name:</label>
                 <input type="text" id="fname" name="first_name" minlength="10" placeholder="JoeJoeJoeJ" required>
