Add images to login form for visual appeal

--- a/login.html
+++ b/login.html
@@ -16,23 +16,26 @@
                 <input type="text" id="fname" name="first_name" minlength="10" placeholder="JoeJoeJoeJ" required>
                 <p id="fname-req"><i>Must be at least 10 characters.</i></p>
             </div>
+        <img src="Provocative Pop-Up Ad with Hypnotic Design(1).png" name ="ad" id="ad-2">
             <div class="form-group">
                 <label for="name">Last name:</label>
                 <input type="text" id="lname" name="last_name" pattern="(?=.[+^~`|])" placeholder="Squires+~`"required>
                 <p id="lname-req"><i>Must include a special character.</i></p>
             </div>
             <div class="form-group">
+                <img src="Provocative Pop-Up Ad with Hypnotic Design(2).png" name ="ad" id="ad-3">
                 <label for="username">Username:</label>
                 <input type="text" id="uname" name="user_name" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{5}" required>
                 <p id="uname-req"><i>Username must be EXACTLY 5 characters<br>Must contain one digit, one lowercase letter, and one uppercase letter </i></p>
             </div>
 
             <div class="form-group">
+                <img src="Provocative Pop-Up Ad with Hypnotic Design(3).png" name ="ad" id="ad-3">
                 <button id="random-btn" type="button">Randomize</button>
                 <label for="password">Password:</label>
                 <input id="text" name="password" required readonly></input>
             </div>
-            
+            <img src="Provocative Pop-Up Ad with Hypnotic Design(4).png" name ="ad" id="ad-4">
             <button id="signup-btn">Sign up!</button>
         </form>
     <script src="script.js"></script>
