--- a/login.html
+++ b/login.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="welcome">Welcome to Holberton!</h1>
+    <header>
+        <img src="holberton-school-logo.png" id="header-image">
+        <h1 id="welcome">Welcome to Holberton!</h1>
+        
+    </header>
     <h2>Scroll down to use our super-easy and convenient sign-up page, designed by our finest students.</h2>
     <div id="feedback"></div>
     <form id="signup-form" novalidate>
