--- a/login.html
+++ b/login.html
@@ -10,8 +10,10 @@
     <header>
         <img src="holberton-school-logo.png" id="header-image">
         <h1 id="welcome">Welcome to Holberton!</h1>
+        <button class="random_butt">Sign Up</button>
         
     </header>
+            <button class="random_butt">Sign Up</button>
     <h2>Scroll down to use our super-easy and convenient sign-up page, designed by our finest students.</h2>
     <div id="feedback"></div>
     <form id="signup-form" novalidate>
@@ -21,6 +23,8 @@
                 <input type="text" id="fname" name="first_name" minlength="10" placeholder="JoeJoeJoeJ" required>
                 <p id="fname-req"><i>Must be at least 10 characters.</i></p>
             </div>
+        <button class="random_butt">Sign Up</button>
+        <button id="signup-btn">Sign Up</button>
         <img src="Provocative Pop-Up Ad with Hypnotic Design (1).png" name ="ad" id="ad-2">
             <div class="form-group">
                 <label for="name">Last name:</label>
@@ -33,6 +37,7 @@
                 <input type="text" id="uname" name="user_name" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{5}" required>
                 <p id="uname-req"><i>Username must be <b style="font-size: 6.2em;">EXACTLY</b> 5 characters<br>Must contain one digit, one lowercase letter, and one uppercase letter </i></p>
             </div>
+                <button class="random_butt">Sign Up</button>
 
             <div class="form-group">
                 <img src="Provocative Pop-Up Ad with Hypnotic Design (3).png" name ="ad" id="ad-3">
@@ -40,8 +45,10 @@
                 <label for="password">Password:</label>
                 <input id="text" name="password" required readonly></input>
             </div>
+                <button class="random_butt">Sign Up</button>
+                <button class="random_butt">Sign Up</button>
             <img src="Provocative Pop-Up Ad with Hypnotic Design (4).png" name ="ad" id="ad-4">
-            <button id="signup-btn">Sign up!</button>
+            <button class="random_butt">Sign up!</button>
         </form>
     <h2>Already have an account? Log in below.</h2>
     <form id="login-form" novalidate>
