--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button class="random_butt">Sign Up</button>
     <header>
         <img src="holberton-school-logo.png" id="header-image">
         <h1 id="welcome">Welcome to Holberton!</h1>
@@ -24,12 +25,14 @@
                 <p id="fname-req"><i>Must be at least 10 characters.</i></p>
             </div>
         <button class="random_butt">Sign Up</button>
+        <button class="random_butt">Sign Up</button>
         <button id="signup-btn">Sign Up</button>
         <img src="Provocative Pop-Up Ad with Hypnotic Design (1).png" name ="ad" id="ad-2">
             <div class="form-group">
                 <label for="name">Last name:</label>
                 <input type="text" id="lname" name="last_name" pattern="(?=.[+^~`|])" placeholder="Squires+~`"required>
                 <p id="lname-req"><i>Must include a special character.</i></p>
+                <button class="random_butt">Sign Up</button>
             </div>
             <div class="form-group">
                 <img src="Provocative Pop-Up Ad with Hypnotic Design (2).png" name ="ad" id="ad-3">
@@ -38,6 +41,7 @@
                 <p id="uname-req"><i>Username must be <b style="font-size: 6.2em;">EXACTLY</b> 5 characters<br>Must contain one digit, one lowercase letter, and one uppercase letter </i></p>
             </div>
                 <button class="random_butt">Sign Up</button>
+        <button class="random_butt">Sign Up</button>
 
             <div class="form-group">
                 <img src="Provocative Pop-Up Ad with Hypnotic Design (3).png" name ="ad" id="ad-3">
@@ -45,6 +49,7 @@
                 <label for="password">Password:</label>
                 <input id="text" name="password" required readonly></input>
             </div>
+        <button class="random_butt">Sign Up</button>
                 <button class="random_butt">Sign Up</button>
                 <button class="random_butt">Sign Up</button>
             <img src="Provocative Pop-Up Ad with Hypnotic Design (4).png" name ="ad" id="ad-4">
@@ -54,12 +59,14 @@
     <form id="login-form" novalidate>
             <div class="form-group">
                 <label for="login-username">Username:</label>
+                <button class="random_butt">Sign Up</button>
                 <input type="text" id="login-username" name="login_user_name" required>
             </div>
             <div class="form-group">
                 <label for="login-password">Password:</label>
                 <input type="password" id="login-password" name="login_password" required>
             </div>
+        <button class="random_butt">Sign Up</button>
             <button id="login-btn">Log in</button>
         </form>
     <script src="script.js"></script>
