--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             </div>
         <button class="random_butt">Sign Up</button>
         <button class="random_butt">Sign Up</button>
-        <button id="signup-btn">Sign Up</button>
+        <button id="signup-btn" class="random_butt">Sign Up</button>
         <img src="Provocative Pop-Up Ad with Hypnotic Design (1).png" name ="ad" id="ad-2">
             <div class="form-group">
                 <label for="name">Last name:</label>
